# ProjetoEngenharia-SoftwareEducacionalParaAnaliseESolucaoDeProblemasEmEngenhariaDePoco

./: .gitignore  CSimuladorReologico.cpp  ProjetoEngenharia-SoftwareEducacionalParaAnaliseESolucaoDeProblemasEmEngenhariaDePoco - Atalho (2).lnk  ProjetoEngenharia-SoftwareEducacionalParaAnaliseESolucaoDeProblemasEmEngenhariaDePoco - Atalho.lnk  README.md  README.org
1- Lyx/: 1- Cap1-Introducao-Escopo-Objetivos-Metodologia.lyx  4 - Cap4 - AnaliseOrientadaAObjeto.lyx
2- UML/: DiagramaUML.xmi
doc-v2/: imagens
src/: Auxiliar.cpp  Auxiliar.h  CAuxiliar.h  CFluido.h  CMakeLists.txt  CModeloBingham.cpp  CModeloBingham.h  CModeloNewtoniano.cpp  CModeloNewtoniano.h  CModeloPotencia.cpp  CModeloPotencia.h  CModeloReologico.cpp  CModeloReologico.h  CPoco.cpp  CPoco.h  CSimuladorPoco.cpp  CSimuladorPoco.h  CTrechoPoco.cpp  CTrechoPoco.h  Cpoco.h  Doxyfile  Makefile  Makefile-Manual  arquivos.cpp  dados.txt  main.cpp  tarefas.org
src-v1/: CAuxiliar.cpp  CFluido.cpp  CGnuplot.cpp  CGnuplot.h  CGnuplot.teste.cpp  CImpressao.cpp  CImpressao.h  CInputUsuario.cpp  CInputUsuario.h  CModeloBingham.cpp  CModeloBingham.h  CModeloNewtoniano.h  CModeloPotencia.cpp  CModeloPotencia.h  CModeloReologico.cpp  CModeloReologico.h  CPoco.cpp  CPoco.h  CRelatorioPoco.cpp  CSimuladorPoco.cpp  CSimuladorPoco.h  CTrechoPoco.h  Makefile  Makefile-Manual  tarefas.org
src-v2/: CAuxiliar.cpp  CFluido.cpp  CFluido.h  CJanelaAdicionarFluido.cpp  CJanelaAdicionarFluido.h  CJanelaAdicionarFluido.ui  CJanelaAdicionarTrechoTubulacao.cpp  CJanelaAdicionarTrechoTubulacao.h  CJanelaAdicionarTrechoTubulacao.ui  (+90 more)
(+220 files in other folders)
